...
        }

        configurationMenuItem.submenu = configurationMenu
        mainMenu.addItem(configurationMenuItem)

        let workspaceMenuItem = NSMenuItem()
        let workspaceMenu = NSMenu(title: "Workspace")

        let newWorkspaceMenuItem = NSMenuItem(
            title: "New Workspace",
            action: #selector(createWorkspaceFromMenu(_:)),
            keyEquivalent: ""
        )
        newWorkspaceMenuItem.target = self
        workspaceMenu.addItem(newWorkspaceMenuItem)

...
            keyEquivalent: ""
        )
        restoreWorkspaceMenuItem.target = self
        workspaceMenu.addItem(restoreWorkspaceMenuItem)

        let deleteWorkspaceMenuItem = NSMenuItem(
            title: "Delete Workspace",
            action: #selector(deleteWorkspaceFromMenu(_:)),
            keyEquivalent: ""
        )
        deleteWorkspaceMenuItem.target = self
        workspaceMenu.addItem(deleteWorkspaceMenuItem)

        let renameWorkspaceMenuItem = NSMenuItem(
            title: "Rename Workspace…",
            action: #selector(renameWorkspaceFromMenu(_:)),
            keyEquivalent: ""
        )
        renameWorkspaceMenuItem.target = self
        workspaceMenu.addItem(renameWorkspaceMenuItem)
        workspaceMenu.addItem(.separator())
...
